ipc/ipdl/test/ipdl/ok/mutualRecUnion.ipdl
union X {
    int;
    Y[];
};

union Y {
    X;
    Z;
};

union Z {
    double;
    X;
};

protocol mutualRecUnion {
child:
    Test(X x, Y y, Z z);
    __delete__();
};
