ipc/ipdl/test/ipdl/error/undefMutualRecStructUnion.ipdl
struct X { Y y; };
union Y { Z; };
struct Z { X x; };

protocol undefMutualRecStructUnion {
child: async __delete__(X x);
};
